--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -18,7 +18,7 @@
 		<aside class="col-md-6">
 <article class="gallery-wrap"> 
 	<div class="img-big-wrap">
-	   <a href="#"><img src="{% static './images/items/12.jpg'%}"></a>
+	   <a href="#"><img src="{{  single_product.images.url }}"></a>
 	</div> <!-- img-big-wrap.// -->
 	
 </article> <!-- gallery-wrap .end// -->
@@ -78,7 +78,7 @@
 	{% if single_product.stock <= 0 %}
 		<h5>Out of stock </h5>
 	{% else %}
-		<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+		<a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
 	{%endif%}
 </article> <!-- product-info-aside .// -->
 		</main> <!-- col.// -->
