--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -146,7 +146,8 @@
 						<del class="price-old">$1980</del>
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="{% url 'add_cart' elements.id %}" class="btn btn-block btn-success">Added to cart </a>
+				<a href="{{ elements.get_url}}" class="btn btn-block btn-primary">View Details </a>
+				 <!-- <a href="{% url 'add_cart' elements.id %}" class="btn btn-block btn-warning">Added to cart </a> -->
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
@@ -156,13 +157,36 @@
 
 
 <nav class="mt-4" aria-label="Page navigation sample">
-  <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
+
+	{% if productkey.has_other_pages %}
+		<ul class="pagination">
+			{% if productkey.has_previous %}
+			<li class="page-item "><a class="page-link" href="?page={{ productkey.previous_page_number }}">Previous</a></li>
+			{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+			{% endif %}
+
+			{% for i in productkey.paginator.page_range %}
+				{% if productkey.number == i  %}
+
+				<li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+
+				{% else %}
+
+				<li class="page-item "><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+
+				{% endif %}
+
+			{% endfor %}
+
+			{% if productkey.has_next %}
+			
+			<li class="page-item"><a class="page-link" href="?page={{productkey.next_page_number}}">Next</a></li>
+			{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+			{% endif %}
+		</ul>
+	{% endif %}
 </nav>
 
 	</main> <!-- col.// -->
