--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -24,70 +24,69 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<article class="content-body">
+			<form action="{% url 'add_cart' single_product.id %}" method="GET">
+				<article class="content-body">
 
-<h2 class="title">{{single_product.product_name}}</h2>
+				<h2 class="title">{{single_product.product_name}}</h2>
 
-<div class="mb-3"> 
-	<var class="price h4">${{single_product.price}}</var> 
-</div> 
+				<div class="mb-3"> 
+					<var class="price h4">${{single_product.price}}</var> 
+				</div> 
 
-<p>{{single_product.description}}</p>
+				<p>{{single_product.description}}</p>
 
 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<hr>
-	{% if single_product.stock <= 0 %}
-		<h5>Out of stock </h5>
-	{% else %}
-		{% if in_cart %}
-			<a href="#" class="btn  btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i>  </a>
-			<a href="{% url 'cart'  %}" class="btn  btn-primary"> <span class="text">View Cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-		{% else %}
-		
-			<a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-		{% endif %}
-	
-	{%endif%}
-</article> <!-- product-info-aside .// -->
+				<hr>
+
+				<div class="row mb-3">
+					<div class="col-md-6">
+						<div class="item-option-select">
+							<h6>oru color eduk kuttah</h6>
+							<select name="color" class="form-control">
+								<option value="red">chumala</option>
+								<option value="yellow">manjaaa</option>
+								<option value="green">kili_pacha</option>
+							</select>
+						</div>
+					</div>
+
+					<div class="col-md-6">
+						<div class="item-option-select">
+							<h6>Select Size</h6>
+							<select name="size" class="form-control">
+								<option value="small">cheruth</option>
+								<option value="Medium">Medium</option>
+								<option value="Large">Valuth</option>
+							</select>
+						</div>
+					</div>
+				</div>
+
+				<hr>
+
+				<div class="row">
+					<div class="col-md-12 d-flex gap-2">
+						{% if single_product.stock <= 0 %}
+							<h5 class="text-danger">Out of stock</h5>
+						{% else %}
+							{% if in_cart %}
+								<a href="#" class="btn btn-success">
+									Added to cart <i class="fas fa-check"></i>
+								</a>
+								<a href="{% url 'cart' %}" class="btn btn-primary">
+									View Cart <i class="fas fa-shopping-cart"></i>
+								</a>
+							{% else %}
+								<button type="submit" class="btn btn-primary">
+									Add to cart <i class="fas fa-shopping-cart"></i>
+								</button>
+							{% endif %}
+						{% endif %}
+					</div>
+				</div>
+
+				</article> <!-- product-info-aside .// -->
+			</form>
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
@@ -123,6 +122,8 @@
 
 	
 
+	
+
 	</div> <!-- col.// -->
 </div> <!-- row.// -->
 
@@ -132,3 +133,43 @@
 
 
 {% endblock%}
+
+
+
+<!-- form radio button
+									<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-light">
+									<input type="radio" name="radio_color"> S
+								</label>
+								<label class="btn btn-light active">
+									<input type="radio" name="radio_color" checked> M
+								</label>
+								<label class="btn btn-light">
+									<input type="radio" name="radio_color"> L
+								</label>
+								<label class="btn btn-light">
+									<input type="radio" name="radio_color"> XL
+								</label>
+								</div> 
+							</div> -->
+
+
+	<!-- radio button option colorinte 
+							<div class="item-option-select">
+								<h6>Choose Color</h6>
+								<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-light">
+									<input type="radio" name="radio_color"> Silver
+								</label>
+								<label class="btn btn-light">
+									<input type="radio" name="radio_color" > Gray
+								</label>
+								<label class="btn btn-light active">
+									<input type="radio" name="radio_color checked"> Gold
+								</label>
+								<label class="btn btn-light">
+									<input type="radio" name="radio_color"> Black
+								</label>
+								</div> 
+							</div>   -->
+
