--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -7,8 +7,13 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 <div class="container">
-	<h2 class="title-page">Our Store</h2>
+	{% if 'search' in request.path %}
+	<h2> Search </h2>
+	<h2 class="title-page">SEARCH RESULT</h2>
 	
+	{% else %}
+	<h2 class="title-page">Our Store</h2>
+	{% endif %}
 </div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
@@ -128,9 +133,8 @@
 </header><!-- sect-heading -->
 
 <div class="row">
-
-   {% for elements in productkey%}
-
+ {% if productkey %}
+	{% for elements in productkey%}
 	<div class="col-md-4">
 		<figure class="card card-product-grid">
 			<div class="img-wrap"> 
@@ -152,6 +156,11 @@
 		</figure>
 	</div> <!-- col.// -->
    {%endfor%}
+ {% else %}
+	<div>
+		<h2>Onnm illa ividey </h2>
+	</div>
+ {% endif %}
 	
 </div> <!-- row end.// -->
 
